Prevent horizontal scrolling in panes

--- a/imports/stylesheets/panes.import.styl
+++ b/imports/stylesheets/panes.import.styl
@@ -19,7 +19,8 @@
   bottom 0
   padding-bottom 5em
   z-index $mid-layer
-  overflow-y auto
+  overflow-y scroll
+  overflow-x hidden
   background white
   .text-center
     padding 0 15px
